# hass.tibber_prices

./: .devcontainer.json  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  CONTRIBUTING.md  README.md  cliff.toml  hacs.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.devcontainer/: devcontainer-extensions.json  devcontainer-lock.json  devcontainer.json  setup-git.sh
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/instructions/: commit-messages.instructions.md
.github/workflows/: auto-assign.yml  auto-tag.yml  docusaurus.yml  lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/integration_blueprint/: __init__.py  binary_sensor.py
custom_components/tibber_prices/: __init__.py  api.py  average_utils.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  icons.json  manifest.json  migrations.py  period_utils.py  price_utils.py  sensor.py  services.py  services.yaml  services_old.py  switch.py
developer/: 404.html  api-reference.html  architecture.html  caching-strategy.html  coding-guidelines.html  contributing.html  critical-patterns.html  debugging.html  index.html  intro.html  lunr-index.json  markdown-page.html  performance.html  period-calculation-theory.html  refactoring-guide.html  release-management.html  search-doc-1764985317891.json  setup.html  sitemap.xml  testing.html  timer-architecture.html
docs/: cleanup-old-versions.sh  index.html
docs/developer/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  versions.json
docs/development/: README.md  architecture.md  caching-strategy.md  coding-guidelines.md  critical-patterns.md  period-calculation-theory.md  refactoring-guide.md  release-management.md  setup.md  testing.md  timer-architecture.md
docs/user/: README.md  actions.md  automation-examples.md  chart-examples.md  configuration.md  docusaurus.config.ts  icon-colors.md  installation.md  package-lock.json  package.json  period-calculation.md  sensors.md  services.md  sidebars.ts  troubleshooting.md  versions.json
images/charts/: README.md
planning/: README.md
schemas/json/: manifest_schema.json  translation_schema.json
scripts/: bootstrap  check  check-all  check-if-released  clean  develop  format  format-all  generate-release-notes  hassfest  help  lint  lint-all  lint-check  lint-fix  motd  prepare-release  setup  suggest-version  sync-hacs  test  type-check  type-check-tests
scripts/docs/: build-all  build-changed-sites  dev-developer  dev-user  generate-sensor-reference
scripts/json_schemas/: translation_schema.json
scripts/release/: check-if-released  generate-notes  hassfest  prepare  suggest-version
scripts/setup/: bootstrap  reset  setup  sync-hacs  update-ha-version
tests/: __init__.py  test_avg_none_fallback.py  test_best_price_e2e.py  test_binary_sensor_period_attributes.py  test_cache_age.py  test_cache_validity.py  test_cache_validity_after_midnight.py  test_chart_data_push_updates.py  test_config_validators.py  test_connect_segments.py  test_coordinator_basic.py  test_coordinator_enhanced.py  test_coordinator_shutdown.py  test_flex_filter_bug.py  test_flex_filter_fix.py  test_hello.py  test_interval_pool_memory_leak.py  test_interval_pool_optimization.py  test_level_filtering.py  test_lifecycle_state.py  test_lifecycle_tomorrow_update.py  test_mean_median_display.py  test_midnight_handler.py  test_midnight_periods.py  test_midnight_turnover.py  test_minmax_none_fallback.py  test_negative_best_price_periods.py  test_next_api_poll.py  test_peak_price_e2e.py  test_percentage_calculations.py  test_period_calculation.py  test_period_calculation_gap_issue.py  test_period_overlap.py  test_period_price_ordering_issue.py  test_period_statistics.py  test_periods_hash.py  test_price_calculations.py  test_price_utils.py  test_price_utils_integration.py  test_price_window.py  (+11 more)
tests/services/: test_connect_segments.py  test_energy_calculator.py  test_find_service_responses.py  (+8 more)
user/: 404.html  actions.html  automation-examples.html  chart-examples.html  concepts.html  configuration.html  dashboard-examples.html  dynamic-icons.html  faq.html  glossary.html  icon-colors.html  index.html  installation.html  intro.html  lunr-index-1764985265728.json  markdown-page.html  period-calculation.html  search-doc-1764985265728.json  sensors.html  sitemap.xml  troubleshooting.html
(+580 files in other folders)
